# rust-grpc-tonic

./: Cargo.toml  README.md  build.rs
proto/: say.proto
src/: client.rs  hello.rs  server.rs
